# nornity

./: Cargo.toml  README.md  app.vue  buildspec.yaml  bun.lockb  nuxt.config.ts  package.json
assets/: global.css
components/: CommentSection.vue  FeaturedArticles.vue  FeaturedProducts.vue  SearchResults.vue
composables/: useDarkMode.ts
content/: airplay-for-any-speakers.md  baking-baguette.md  linux-could-not-get-error.md  linux-how-to-update-kernel.md  plain-white-bread.md  releasing-lamina.md  test-code-blocks.md  ubuntu-focal-fossa-source-list.md  ubuntu-noble-numbat-source-list.md
content/articles/: EuclideanAlgorithm.md  first.md
content/articles/Aultmore12Y/: index.md
content/articles/BinarySearchAlgorithm/: index.md
content/articles/EuclideanAlgorithm/: index.md
content/articles/first/: index.md
layouts/: article.vue  default.vue  searchResults.vue
pages/: about.vue  index.vue
pages/articles/: [...slug].vue  index.vue
pages/products/: _slug.vue
scripts/: minify-css.sh  new_post.sh
server/routes/: rss.xml.ts  sitemap.xml.ts  sitemap_.xml.ts
src/: app.rs  blog.rs  config.rs  handlers.rs  logger.rs  main.rs  routes.rs  server.rs  template_helpers.rs  templates.rs  watcher.rs
src/components/: code_block.rs  custom_components.rs  mod.rs  rss.rs  search.rs  sitemap.rs  ui.rs
static/css/: 404.css  blog-post.css  code-blocks.css  code-blocks.min.css  style.css  style.css.backup  style.min.css
templates/: 404.html  base.html  blog_list.html  blog_post.html  homepage.html  index.html
templates/components/: fab.html  footer.html
(+13 files in other folders)
