[package]
name = "nornity"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["fs", "net", "sync", "time", "macros","rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs"] }
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4" }
pulldown-cmark = "0.10"
notify = { version = "6.1", optional = true }

[features]
default = []
hot-reload = ["notify"] 